added integration tests

--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -11,4 +11,6 @@ services:
     image: mailhog/mailhog
     ports:
       - "8025:8025"
-      - "1025:1025"
+  integration:
+    image: ianleedham/aspnetcore_generator:integration-10
+    build: .
